пофиксила все проблемы, почистила код